--- a/src/index.css
+++ b/src/index.css
@@ -6,16 +6,6 @@ body {
 	width: 100%;
 	height: 100vh;
 	background-color: black;
-}
-
-body h1 {
-	font-size: 10rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0;
-	padding: 0;
-	height: 100vh;
-	color: rgb(0, 255, 255);
-	text-shadow: 0 0 15px white;
+	overflow-x: none;
+	overflow-y: auto;
 }
