--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -4,15 +4,112 @@
 	height: 100vh;
 	grid-template-columns: 1fr 1fr;
 	gap: 10px;
+	overflow: hidden;
 }
-
 .c-col-1 {
 	width: 100%;
 	grid-column: 1;
-	border: 1px solid rgb(9, 9, 255);
+	color: white;
 }
+/*--------------------------------------------*/
+.first-row {
+	display: flex;
+	height: 100px;
+	margin: 10px 0;
+}
+.logo {
+	display: grid;
+	place-items: center;
+	width: 90%;
+	border: 1px solid rgb(93, 84, 224);
+}
+.notifications {
+	display: grid;
+	place-items: center;
+	width: 10%;
+	border: 1px solid rgb(93, 84, 224);
+}
+
+/*--------------------------------------------*/
+.second-row {
+	display: flex;
+	height: 60vh;
+	margin: 10px 0;
+}
+.home {
+	display: grid;
+	place-items: center;
+	width: 50%;
+	border: 1px solid rgb(42, 116, 165);
+}
+.c-info-1 {
+	display: flex;
+	flex-flow: wrap;
+	width: 50%;
+	border: 1px solid rgb(42, 116, 165);
+}
+.add {
+	display: grid;
+	place-items: center;
+	width: 100%;
+	border: 1px solid rgb(42, 116, 165);
+}
+.general-state {
+	display: grid;
+	place-items: center;
+	width: 100%;
+	border: 1px solid rgb(42, 116, 165);
+}
+
+/*--------------------------------------------*/
+
+.third-row {
+	display: flex;
+	height: calc(40vh - 100px);
+}
+.css-last-login {
+	display: grid;
+	place-items: center;
+	width: 100%;
+	border: 1px solid rgb(68, 255, 208);
+}
+.to-do {
+	display: grid;
+	place-items: center;
+	width: 100%;
+	border: 1px solid rgb(68, 255, 208);
+}
+
+/*--------------------------------------------*/
 .c-col-2 {
 	width: 100%;
 	grid-column: 2;
-	border: 1px solid rgb(9, 185, 255);
+	color: white;
+	display: flex;
+	margin: 10px 0;
+}
+.general-data {
+	display: grid;
+	place-items: center;
+	border: 1px solid rgb(66, 0, 128);
+	height: 100vh;
+	width: 100%;
+}
+.c-info-2 {
+	width: 100%;
+	height: 100vh;
+}
+.user-profile {
+	display: grid;
+	place-items: center;
+	width: 100%;
+	border: 1px solid rgb(205, 50, 115);
+	height: 50%;
+}
+.pet-profile {
+	display: grid;
+	place-items: center;
+	height: 50%;
+	width: 100%;
+	border: 1px solid rgb(205, 50, 115);
 }
